@@ -3,6 +3,8 @@ eglibc (2.9-27) UNRELEASED; urgency=low
   [ Aurelien Jarno ]
   * Extend description of libc-bin, patch by Christoph Berg. Closes: 
     bug#544389.
+  * Strip *.o files manually (dh_strip does not do it) to prevent
+    leakage of the build directory.
 
   [ Samuel Thibault ]
   * debian/debhelper.in/libc.install: Install libc/*-gnu*/ instead of
